# Quiet

./: Cargo.toml  README.md
src/: error.rs  main.rs
src/crypto/: handshake.rs  mod.rs  ratchet.rs
src/identity/: keystore.rs  mod.rs
src/network/: discovery.rs  mod.rs  protocol.rs  swarm.rs
src/state/: mod.rs  persistence.rs
src/ui/: mod.rs  terminal.rs
