[package]
name = "darkterm"
version = "0.1.0"
edition = "2021"
authors = ["DarkTerm Contributors"]
description = "Encrypted Peer-to-Peer Terminal Messenger"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# P2P networking
libp2p = { version = "0.54", features = [
    "noise",
    "yamux",
    "tcp",
    "quic",
    "dns",
    "mdns",
    "kad",
    "relay",
    "dcutr",
    "identify",
    "macros",
    "tokio",
    "request-response",
    "cbor"
] }

# Terminal UI
ratatui = "0.29"
crossterm = "0.28"

# Cryptography
vodozemac = "0.8"
x25519-dalek = "2.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
serde_cbor = "0.11"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
directories = "6.0"
futures = "0.3"
async-trait = "0.1"
hex = "0.4"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
